[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claimed-cli"
dynamic = ["version"]
authors = [
  { name="The CLAIMED authors", email="claimed-framework@proton.me"},
]
maintainers = [
  { name="Romeo Kienzler", email="claimed-framework@proton.me"},
  { name="Benedikt Blumenstiel"},
]
description = "CLI tool for running CLAIMED operators locally"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["CLAIMED", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/claimed-framework/cli"
"Bug Tracker" = "https://github.com/claimed-framework/cli/issues"

[project.scripts]
claimed = "claimed:main"

[tool.setuptools.package-data]
"scripts" = ["*"]
